--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,27 +1,29 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.iliujing.mypassword"
-        minSdkVersion 19
-        targetSdkVersion 23
-        versionCode 2
-        versionName "1.0.1"
+        minSdkVersion 23
+        targetSdkVersion 28
+        versionCode 10
+        versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    lintOptions {
+        abortOnError false
+    }
+
     buildTypes {
         prod {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
             applicationVariants.all { variant ->
-                variant.outputs.each { output ->
+                variant.outputs.all { output ->
                     def outputFile = output.outputFile
                     if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                        // 输出apk名称为appname-1.0-beta1-xxxx-xx-xx.apk
-                        def fileName = "mypassword-release-${defaultConfig.versionCode}-${defaultConfig.versionName}.apk"
-                        output.outputFile = new File(outputFile.parent, fileName)
+                        outputFileName = defaultConfig.applicationId.subSequence(defaultConfig.applicationId.lastIndexOf(".") + 1, defaultConfig.applicationId.length()) + "-v" + defaultConfig.versionCode  + "-" + output.baseName + ".apk"
                     }
                 }
             }
@@ -30,16 +32,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'cn.hutool:hutool-all:4.1.10'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'cn.hutool:hutool-all:4.1.10'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    testCompile 'junit:junit:4.12'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    testImplementation 'junit:junit:4.12'
 }
